# mfd-cli-client

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt  requirements_os.txt
.github/workflows/: check_code_standard.yml  check_pr_format.yml  dependency_review.yml  main.yml  manual_release.yml  pull_request.yml  pull_requests.yml  run_tests.yml
examples/: cli_client_example.py
mfd_cli_client/: base.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/test_mfd_cli_client/: test_base.py
