[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-cli-client"
description = "Module for cli_client (command line interface client) utility for the Intel® Infrastructure Processing Unit (Intel® IPU)."
requires-python = ">=3.10, <3.14"
version = "1.11.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-cli-client"
Issues = "https://github.com/intel/mfd-cli-client/issues"
Changelog = "https://github.com/intel/mfd-cli-client/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]
